crates/swc_ecma_parser/tests/test262-error-references/fail/c91a41d48af2ef00.js.stderr
error: Expected a semicolon
 --> $DIR/tests/test262-parser/fail/c91a41d48af2ef00.js:1:6
  |
1 | var a.b;
  |      ^

